remove unneccessary items

--- a/src/components/Product-card/ProductCard.css
+++ b/src/components/Product-card/ProductCard.css
@@ -1,173 +1,154 @@
 :root {
-    --color-grey-primary: #f0f0f0;
-    --color-yellow-primary: goldenrod;   
-    --color-orange-primary: darkorange;
-    --color-green-primary: mediumseagreen;
-    --color-red-primary:#e54b4b;
+  --color-grey-primary: #f0f0f0;
+  --color-yellow-primary: goldenrod;
+  --color-orange-primary: darkorange;
+  --color-green-primary: mediumseagreen;
+  --color-red-primary: #e54b4b;
+}
+
+.row {
+  --bs-gutter-x: 0rem !important;
+}
+
+.h-red {
+  background-color: var(--color-red-primary);
+}
+
+.h-green {
+  background-color: var(--color-green-primary);
+}
+
+.h-yellow {
+  background-color: var(--color-yellow-primary);
+}
+
+
+.productList {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 5rem;
+}
+
+.productCard {
+  position: relative;
+  background-color: var(--color-grey-primary);
+  margin: 1rem;
+  flex: 1 0 25rem;
+  max-width: 20rem;
+  max-height: 30rem;
+  transition: 0.2s;
+}
+
+.productCard:hover {
+  transform: translateY(-0.5rem);
+  box-shadow: 0.5rem 0.75rem 1.5rem #bbbbbb;
+}
+
+.productImage {
+  max-width: 100%;
+  height: auto;
+}
+
+
+.productCard__cart {
+  font-size: 2rem;
+  transition: 0.2s;
+  cursor: pointer;
+  color: var(--color-orange-primary);
+}
+
+.productCard__cart:hover {
+  color: mediumseagreen;
+  font-size: 3rem;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.productCard__wishlist {
+  position: absolute;
+  right: 3rem;
+  margin: 1rem;
+  font-size: 2rem;
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.productCard__fastSelling {
+  position: absolute;
+  font-size: 2rem;
+  left: 0;
+  margin: 1rem;
+  fill: var(--color-orange-primary);
+}
+
+.productCard__content {
+  margin: 12px 2rem;
+}
+
+.productName {
+  font-size: 1.5rem;
+}
+
+.displayStack__1,
+.displayStack__2 {
+  margin: 12px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.productPrice {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.productSales,
+.productTime {
+  font-size: 1.1rem;
+}
+
+.productdisc {
+  overflow: hidden;
+  height: 6rem;
+}
+
+.checkout {
+  height: 10rem;
+  position: fixed;
+  bottom: 0;
+  z-index: 111111111111;
+  width: 100%;
+  background-color: var(--color-orange-primary) !important;
+}
+
+.div-cart {
+  width: 30rem;
+}
+
+.cart-height {
+  height: calc(100vh - 10rem);
+  overflow: scroll;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+  .font-size {
+    font-size: 1rem;
   }
 
-  .row{
-    --bs-gutter-x: 0rem !important;
+  .butn_size {
+    height: 2rem;
+    margin: 0 2rem;
   }
 
-  .h-red{
-    background-color: var(--color-red-primary);
+  .navbar-nav .dropdown-menu {
+    position: static;
+    margin-left: 0rem;
+    width: 19rem;
+    max-height: 20rem;
+    overflow: auto;
   }
-
-  .h-green{
-    background-color: var(--color-green-primary);
-  }
-  
-  .h-yellow{
-    background-color: var(--color-yellow-primary);
-  }
-
-  /* .product_grid{
-    display: grid;
-    grid-template-columns: 350px 350px 350px;
-    justify-content: center;
-  } */
-
-  .productList{
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 5rem;
-  }
-  
-  .productCard{
-    /* position: relative;
-    background-color: var(--color-grey-primary);
-    margin: 1rem;
-    flex: 1 0 25rem;
-    max-width: 30rem;
-    max-height: 50rem;
-    transition: 0.2s; */
-    position: relative;
-    background-color: var(--color-grey-primary);
-    margin: 1rem;
-    flex: 1 0 25rem;
-    max-width: 20rem;
-    max-height: 30rem;
-    transition: 0.2s;
-  }
-  
-  .productCard:hover{
-    transform: translateY(-0.5rem);
-    box-shadow: 0.5rem 0.75rem 1.5rem #bbbbbb;
-  }
-  
-  .productImage{
-    /* margin-top: 2rem; */
-    max-width: 100%;
-    height: auto;
-  }
-
-  
-  .productCard__cart{
-    font-size: 2rem;
-    transition: 0.2s;
-    cursor: pointer;
-    color: var(--color-orange-primary);
-  }
-
-  .productCard__cart:hover{
-    /* top: -2rem;
-    position: absolute;
-    right: -40px;
-    margin: 1rem;
-    font-size: 4rem;
-    transition: 0.2s;
-    cursor: pointer; */
-    color: mediumseagreen;
-
-    font-size: 3rem;
-    transition: 0.2s;
-    cursor: pointer;
-  } 
-  
-  .productCard__wishlist{
-    position: absolute;
-    right: 3rem;
-    margin: 1rem;
-    font-size: 2rem;
-    transition: 0.2s;
-    cursor: pointer;
-  }
-  
-  .productCard__fastSelling {
-    position: absolute;
-    font-size: 2rem;
-    left: 0;
-    margin: 1rem;
-    fill: var(--color-orange-primary);
-  }
-  
-  .productCard__content {
-    margin: 12px 2rem;
-  }
-  
-  .productName{
-    font-size: 1.5rem;
-  }
-  
-  .displayStack__1,.displayStack__2{
-    margin: 12px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .productPrice{
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-  
-  .productSales,
-  .productTime{
-    font-size: 1.1rem;
-  }
-
-  .productdisc{
-    overflow: hidden;
-    height: 6rem;
-  }
-
-   .checkout{
-    height: 10rem;
-    position: fixed;
-    bottom: 0;
-    z-index: 111111111111;
-    width: 100%;
-    background-color: var(--color-orange-primary) !important;
-   }
-
-   .div-cart{
-    width: 30rem;
-   }
-
-   .cart-height{
-height: calc(100vh - 10rem);
-overflow: scroll;
-   }
-
-   .cursor-pointer{
-    cursor: pointer;
-   }
-
-   @media only screen and (max-width: 600px) {
-    .font-size {
-      font-size: 1rem;
-    }
-    .butn_size{
-      height:2rem;
-      margin: 0 2rem;
-    }
-    .navbar-nav .dropdown-menu {
-      position: static;
-      margin-left: 0rem;
-      width: 19rem;
-      max-height: 20rem;
-      overflow: auto;
-    }
-  }
-
+}
