--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,4 @@
-.footer-basic {
+.footer_basic {
     margin-top:2rem;
     padding:40px 0;
     background-color:#ffffff;
@@ -6,7 +6,7 @@
     background-color: var(--color-orange-primary);
   }
   
-  .footer-basic ul {
+  .footer_basic ul {
     padding:0;
     list-style:none;
     text-align:center;
@@ -15,26 +15,26 @@
     margin-bottom:0;
   }
   
-  .footer-basic li {
+  .footer_basic li {
     padding:0 10px;
   }
   
-  .footer-basic ul a {
+  .footer_basic ul a {
     color:inherit;
     text-decoration:none;
     opacity:0.8;
   }
   
-  .footer-basic ul a:hover {
+  .footer_basic ul a:hover {
     opacity:1;
   }
   
-  .footer-basic .social {
+  .footer_basic .social {
     text-align:center;
     padding-bottom:25px;
   }
   
-  .footer-basic .social > a {
+  .footer_basic .social > a {
     font-size:24px;
     width:40px;
     height:40px;
@@ -48,11 +48,11 @@
     opacity:0.75;
   }
   
-  .footer-basic .social > a:hover {
+  .footer_basic .social > a:hover {
     opacity:0.9;
   }
   
-  .footer-basic .copyright {
+  .footer_basic .copyright {
     margin-top:15px;
     text-align:center;
     font-size:13px;
